--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
     				<a id="open4off" href="#">关闭</a>
   				</div>
 			</div>
+			<div class="panel panel-primary">
+  				<div class="panel-heading">
+   			 		<h3 class="panel-title">围观地址</h3>
+  				</div>
+  				<div class="panel-body">
+    				<a href="http://live.bilibili.com/15667" target="_blank">哔哩哔哩</a>
+  				</div>
+			</div>
 		</div>
 		<div class="col-md-3">
 			<div class="panel panel-primary">
@@ -137,5 +145,6 @@
 				});
 			});
 		</script>
+		<div style="width:0;height:0;overflow:hidden;"><script src="https://s22.cnzz.com/z_stat.php?id=1262272382&web_id=1262272382" language="JavaScript"></script></div>
 	</body>
 </html>
