--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div class="col-md-3">
 			<div class="panel panel-primary">
   				<div class="panel-heading">
-   			 		<h3 class="panel-title">给键盘充电</h3>
+   			 		<h3 class="panel-title">小电灯</h3>
   				</div>
   				<div class="panel-body">
     				<a id="open4on" href="#">打开</a>
