--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
    			 		<h3 class="panel-title">房间电灯</h3>
   				</div>
   				<div class="panel-body">
-    				<a href="#">（未搭建</a>
+    				<a id="open1on" href="#">打开</a>
+    				<a id="open1off" href="#">关闭</a>
   				</div>
 			</div>
 		</div>
@@ -117,6 +118,16 @@
 		<script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="//cdn.853lab.com/mSnackbar.min.js"></script>
 		<script>
+			$("#open1on").click(function(){
+				$.mSnackbar('执行成功');
+				$.get("http://sonic853.51vip.biz/opentest-up.php",function(){
+				});
+			});
+			$("#open1off").click(function(){
+				$.mSnackbar('执行成功');
+				$.get("http://sonic853.51vip.biz/opentest-down.php",function(){
+				});
+			});
 			$("#open2on").click(function(){
 				$.mSnackbar('执行成功');
 				$.get("http://sonic853.51vip.biz/open2-up.php",function(){
